fixed text overflow

--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@ section#scrollView {
   font-size: 12px;
   color: black;
   white-space: pre-line;
+  padding: 0 10%;
 }
 
 @media only screen and (max-width: 850px) {
